--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 /* CSS Document */
-
+body{margin:0;padding:0}
 .list-group-item-blog {background:#428bca;font-size:20px;text-align:center;color:#fff}
 .list-group-item-work {background:#428bca;font-size:20px;text-align:center;color:#fff}
 .list-group-item-active{background:#f7f7f7}
