--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -10,4 +10,4 @@ body{margin:0;padding:0}
 	margin-right:auto;
 	margin-left:auto
 }
-.mynav{background:#428bca;border:#428bca}
+.mynav{background:#428bca;border:#428bca;width:100%}
